Add an "ExternalHelmControllerName" option to operator and chart

--- a/charts/prometheus-federator/templates/deployment.yaml
+++ b/charts/prometheus-federator/templates/deployment.yaml
@@ -89,6 +89,11 @@ spec:
 {{- else }}
           - --helm-job-image={{ template "system_default_registry" . }}{{ .Values.helmProjectOperator.helmController.job.image.repository }}:{{ .Values.helmProjectOperator.helmController.job.image.tag }}
 {{- end }}
+{{- if and (not .Values.helmProjectOperator.helmController.enabled)  (.Values.helmController.deployment.enabled) }}
+          - --external-helm-controller-name={{ include "prometheus-federator.name" .  }}-helm-controller
+{{- else if and (not .Values.helmProjectOperator.helmController.enabled)  (not .Values.helmController.deployment.enabled) (hasKey .Values "externalHelmControllerName") }}
+          - --external-helm-controller-name={{ .Values.externalHelmControllerName | quote }}
+{{- end }}
 {{- if not .Values.helmProjectOperator.helmLocker.enabled }}
           - --disable-embedded-helm-locker
 {{- end }}
