--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -47,7 +47,7 @@ jobs:
     - name : Install helm
       uses: azure/setup-helm@b9e51907a09c216f16ebe8536097933489208112 # v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        version: 'v3.19.5'
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3
     - name : Install k3d
