--- a/.github/workflows/prom-fed-e2e-ci.yaml
+++ b/.github/workflows/prom-fed-e2e-ci.yaml
@@ -66,7 +66,7 @@ jobs:
       - name : Install helm
         uses: azure/setup-helm@b9e51907a09c216f16ebe8536097933489208112 # v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          version: 'v3.19.5'
       - name: Check if yq is installed
         id: check_yq
         run: |
