--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,5 @@
-rancherProjectMonitoringVersion: 0.7.1
-rancherMonitoringVersion : latest
+rancherProjectMonitoringVersion: 0.7.2
+rancherMonitoringVersion : 108.0.2+up77.9.1-rancher.11
 k3sTestingMaxVersion: v1.34.1+k3s1
 k3sTestingMinVersion: v1.32.9+k3s1
 kuberlrVersion: v6
